Make code blocks wider to avoid wrapping on larger screens
For larger viewports, make the multi-line `<code>` blocks
pull left and right so they will hopefully wrap less.

--- a/css/main.css
+++ b/css/main.css
@@ -753,6 +753,12 @@ pre {
   background: #272822;
   font-size: .9rem;
 }
+@media (min-width: 900px) {
+  pre > code {
+    margin-left: -4vw;
+    margin-right: -4vw;
+  }
+}
 
 /* inline <code> blocks within regular body content*/
 p code, li code {
